fixed spacing

--- a/src/components/FavoritesList/FavoritesList.css
+++ b/src/components/FavoritesList/FavoritesList.css
@@ -21,5 +21,9 @@
     from { transform: rotate(0deg); }
     to { transform: rotate(360deg); }
   }
+
+  .space {
+    margin-right: 1em;
+  }
   
   
